# PR-Wojna

./: CMakeLists.txt  README.md  comm_thread.cpp  comm_thread.h  constants.h  hostfile  main  main.cpp  main.h  main_thread.cpp  main_thread.h  structures.cpp  structures.h
